# Dynamic_Icon_Grounding_Automation

./: README.md  main.py  pyproject.toml
prompts/: position_inference.txt  verification.txt
src/: __init__.py  api_client.py  config.py  executor.py  grounder.py  image_utils.py  logger.py  models.py  planner.py  screenseeker.py  screenshot.py  verifier.py
